# instagram-clone

./: .gitignore  README.md  docker-compose.dev.yml  instagram-clone.code-workspace
compose/auth/: Dockerfile
services/auth/: pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 4271a64fabfe_create_users_table.py  6736ad0350f3_create_addresses_table.py  825c6ff4b4e4_create_profiles_table.py
services/auth/api/config/: settings.py
services/auth/api/models/: address.py  database.py  profile.py  user.py
